[package]
name = "zap-rust"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
hyper = { version = "0.14", features = ["full", "http1", "server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
tracing = "0.1"
dashmap = "5.5"  # For concurrent route storage
