[package]
name = "zap-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", features = ["async", "serde"] }
napi-derive = "2.16.0"
once_cell = "1.19.0"
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1.0"

[[example]]
name = "basic"
path = "examples/basic.rs"
