[package]
name = "zap-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", features = ["async"] }
napi-derive = "2.16.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
futures = "0.3"

[build-dependencies]
napi-build = "2.0.1" 