[package]
name = "zap-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", features = ["serde", "tokio_rt", "async"] }
napi-derive = "2.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }

[build-dependencies]
napi-build = "2.1.2" 